--- a/package.json
+++ b/package.json
@@ -3,27 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "@testing-library/jest-dom": "^5.4.0",
+    "@testing-library/react": "^10.0.2",
+    "@testing-library/user-event": "^10.0.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1",
-    "styled-components": "^5.0.1",
-    "styled-system": "^5.1.4",
-    "history": "latest"
+    "react-scripts": "^3.4.1",
+    "styled-components": "^5.1.0",
+    "styled-system": "^5.1.5",
+    "history": "^4.10.1"
   },
   "devDependencies": {
-    "@types/styled-components": "^4.4.2",
-    "babel-plugin-styled-components": "^1.10.6",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-config-prettier": "^6.1.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.3",
-    "prettier": "^1.18.2",
-    "prettier-eslint": "^9.0.0"
+    "@types/styled-components": "^5.0.1",
+    "babel-plugin-styled-components": "^1.10.7",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
+    "prettier": "^2.0.4",
+    "prettier-eslint": "^9.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
