--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,10 @@
 {
+  "arrowParens": "avoid",
   "bracketSpacing": false,
   "jsxSingleQuote": false,
   "parser": "babel",
   "printWidth": 80,
   "semi": false,
-  "singleQuote": false
+  "singleQuote": false,
+  "trailingComma": "none"
 }
